@@ -4,8 +4,10 @@
  *)
 
 namespace Test 
+
+let x = fun f (x : 'b) y -> ((f : _ -> 'a) x, y) : 'a * _
  
-let id x = x
+(*let id x = x
 
 let ids = [id]
 
@@ -15,11 +17,14 @@ let rec map f = function
     | [] -> []
     | x :: xs -> f x :: map f xs
             
-let tmp1 () =
-    let ids : list (forall 'a. 'a -> 'a) = ids
+
+let poly (f : forall 'a. 'a -> 'a) = f 1, f true
+            
+let tmp1 () =            
+    let ids : list ('a -> 'a) = ids
     in
         map poly ids
-
+*)
 
 (*
 let patt_in_non_letrec f x =
